Immo cards aanvullen.

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -87,16 +87,23 @@
 			<div class="row g-4 justify-content-center c-section__content">
 				{% set houses = craft.entries.section('house').limit(3).all() %}
 				{% for house in houses %}
+				
 					<!-- immo card -->
 					<div
 						class="col-12 col-sm-6 col-lg-4 ">
 						<!-- todo: link de card met de detail page  -->
-						<a href="#" class="c-immo-card">
+						<a href="{{house.url}}" class="c-immo-card">
 							<div class="c-immo-card__imgcontainer">
 								<img
 								src={{house.cover.one().url()}} alt="" class="c-immo-card__img">
 								<!-- todo: Zorg dat de kleur veranderd dmv c-immo-card__tag--rent toe te passen wanneer iets for rent staat  -->
-								<div class="c-immo-card__tag c-immo-card__tag--sale">
+								<div class="c-immo-card__tag 
+								{% switch house.state %}
+									{% case 'rent' %}
+										c-immo-card__tag--rent
+									{% case 'sale' %}
+										c-immo-card__tag--sale
+								{% endswitch %}">
 									<p>For
 										{{house.state}}</p>
 								</div>
@@ -106,7 +113,7 @@
 								<div class="c-immo-card__heading">
 									<h3 class="c-immo-card__title">{{house.title}}</h3>
 									<!-- todo: roep hier het amount op -->
-									<p class="c-immo-card__price">€000,000</p>
+									<p class="c-immo-card__price">{{house.price|money}}</p>
 								</div>
 								<div class="c-immo-card__location">
 									<img src="{{url('img/icons/location.svg')}}" alt="">
@@ -115,26 +122,28 @@
 									</p>
 
 								</div>
-
 								<!-- todo: loop hier over de waarder van de details van het pand -->
+								{% for row in house.details %}
 								<div class="c-immo-card__details">
 									<div class="c-immo-card__icons">
 										<img src="{{url('img/icons/bed.svg')}}" alt="">
 										<p>
-											0 beds
+											{{row.bedrooms}} beds
 										</p>
 									</div>
 									<div class="c-immo-card__icons">
 										<img src="{{url('img/icons/bath.svg')}}" alt="">
-										<p>0 baths
+										<p>{{row.bathrooms}} baths
 										</p>
 									</div>
 									<div class="c-immo-card__icons">
 										<img src="{{url('img/icons/sqf.svg')}}" alt="">
-										<p>0 m²
+										<p>{{row.size}} m²
 										</p>
 									</div>
 								</div>
+
+								{% endfor %}
 
 							</div>
 						</a>
