--- a/templates/house/_entry.twig
+++ b/templates/house/_entry.twig
@@ -24,15 +24,11 @@
                 <div id="carouselExampleIndicators" class="carousel slide">
                     <!-- todo: vul de carousel door te lopen over elke image die geupload is bij de entry -->
                     <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="{{url('img/aptOne/aptOne-one.jpg')}}" class="d-block w-100" alt="">
+                    {% for item in entry.carousel%}
+                        <div class="carousel-item {% if loop.first %}active{% endif %}">
+                            <img src="{{item.url()}}" class="d-block w-100" alt="">
                         </div>
-                        <div class="carousel-item">
-                            <img src="{{url('img/aptOne/aptOne-two.jpg')}}" class="d-block w-100" alt="">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="{{url('img/aptOne/aptOne-three.jpg')}}" class="d-block w-100" alt="">
-                        </div>
+                    {% endfor %}
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -48,12 +44,12 @@
 
                 <h2 class="text-start">{{entry.title}}</h2>
                  <!-- todo: toon de price van de entry -->
-                <p class="c-detail__price"> €000,000</p>
+                <p class="c-detail__price"> {{entry.price|money}}</p>
 
                 <div class="d-flex flex-row gap-2">
                 <!-- todo: voeg de category toe zorg dat deze ook linkt naar het overzicht van deze specifieke category -->
 
-                    <p><a class="c-detail__tag" href="#">Apartment</a></p>
+                    <p><a class="c-detail__tag {% if entry.state == 'rent' %}c-immo-card__tag--rent{% elseif entry.state == 'sale' %}c-immo-card__tag--sale{% endif %}" href="#">Apartment</a></p>
                    <!-- Zorg dat de kleur van de tag veranderd d.m.v .c-detail__tag--rent toe te passen wanneer iets “for rent” staat. -->
                     <p><a class="c-detail__tag c-detail__tag--sale" href="#">For {{entry.state}}</a></p>
                 </div>
@@ -68,23 +64,25 @@
 					</div>
 
                  <!-- todo: Loop over de waardes van de details van het pand bij .c-detail__rooms.-->
-                <div class="c-detail__rooms">
-                    <div class="c-detail__icons">
-                        <img src="{{url('img/icons/bed.svg')}}" alt="">
-                        <p>1 beds
-                        </p>
+                 {% for item in entry.details %}
+                    <div class="c-detail__rooms">
+                        <div class="c-detail__icons">
+                            <img src="{{url('img/icons/bed.svg')}}" alt="">
+                            <p>{{item.bedrooms}} beds
+                            </p>
+                        </div>
+                        <div class="c-detail__icons">
+                            <img src="{{url('img/icons/bath.svg')}}" alt="">
+                            <p>{{item.bathrooms}} baths
+                            </p>
+                        </div>
+                        <div class="c-detail__icons">
+                            <img src="{{url('img/icons/sqf.svg')}}" alt="">
+                            <p>{{item.size}}m²
+                            </p>
+                        </div>
                     </div>
-                    <div class="c-detail__icons">
-                        <img src="{{url('img/icons/bath.svg')}}" alt="">
-                        <p>1 baths
-                        </p>
-                    </div>
-                    <div class="c-detail__icons">
-                        <img src="{{url('img/icons/sqf.svg')}}" alt="">
-                        <p>80m²
-                        </p>
-                    </div>
-                </div>
+                 {% endfor %}
                 <div class="row u-background-grey c-detail__realtor">
                     <div class="col-9 p-3 p-sm-4 c-detail__realtor-info">
                         <p>Your expert</p>
@@ -104,17 +102,15 @@
                  <!-- todo: Loop over de waardes van de strengths van het pand bij .c-detail__list.-->
 
                 <ul>
-                    <li class="c-detail__list-item"> EPC label A</li>
-                    <li class="c-detail__list-item"> 2 terraces</li>
-                    <li class="c-detail__list-item"> Wide bedroom</li>
-                    <li class="c-detail__list-item"> Green neighbourhood</li>
-                    <li class="c-detail__list-item"> Water view</li>
-                    <li class="c-detail__list-item"> Ready to move in</li>
+                {% for item in entry.strengths %}
+                    <li class="c-detail__list-item"> {{item.listItem}}</li>
+                {% endfor %}
+                    
                 </ul>
             </div>
             <div class="col-12 col-sm-8 col-md-8 p-4 c-detail__about">
                 <h2 class="text-start">About</h2>
-                {{entry.description}}
+                {{entry.bodyText}}
 
             </div>
         </div>
