--- a/templates/index.twig
+++ b/templates/index.twig
@@ -30,50 +30,23 @@
 
 		<div class="container-fluid c-section ">
 			<div class="c-categories">
-				<h2 class="c-section__title">Featured Categories</h2>
-				<p class="c-section__subtitle">What type of house are you looking for?</p>
-
+			{% set allCategories = craft.entries.section('categories').level(1).one() %}
+				<h2 class="c-section__title">{{ allCategories.title }}</h2>
+				<p class="c-section__subtitle">{{allCategories.subtext}}</p>
+				{% set categories = allCategories.children.all() %}
 				<!-- todo: plak hier de categories vanuit templates/categories/index.twig -->
 				<div class="row g-3 justify-content-center c-section__content">
-					<a href="#" class="c-categories__card col-12 col-sm-3 col-lg-2">
+					{% for categorie in categories %}
+					<a href="{{categorie.url()}}" class="c-categories__card col-12 col-sm-3 col-lg-2">
 						<div class="c-categories__info">
-							<h3 class="c-categories__title">Town House</h3>
+							<h3 class="c-categories__title">{{ categorie.title }}</h3>
 							<p class="">2 properties</p>
 						</div>
 						<div class="c-categories__imgcontainer">
-							<img src="img/town-houses.jpeg" alt="" class="c-categories__img">
+							<img src="{{ categorie.cover.one().url() }}" alt="" class="c-categories__img">
 						</div>
 					</a>
-
-					<a href="#" class="col-12 col-sm-3 col-lg-2 c-categories__card">
-						<div class="c-categories__info">
-							<h3 class="c-categories__title">Villa</h3>
-							<p class="">10 properties</p>
-						</div>
-						<div class="c-categories__imgcontainer">
-							<img src="img/modern-villa.jpeg" alt="" class="c-categories__img">
-						</div>
-					</a>
-
-					<a href="#" class="col-12 col-sm-3 col-lg-2 c-categories__card">
-						<div class="c-categories__info">
-							<h3 class="c-categories__title">Apartment</h3>
-							<p class="">3 properties</p>
-						</div>
-						<div class="c-categories__imgcontainer">
-							<img src="img/apartment.jpeg" alt="" class="c-categories__img">
-						</div>
-					</a>
-
-					<a href="#" class="col-12 col-sm-3 col-lg-2 c-categories__card">
-						<div class="c-categories__info">
-							<h3 class="c-categories__title">Office</h3>
-							<p class="">3 properties</p>
-						</div>
-						<div class="c-categories__imgcontainer">
-							<img src="img/office.jpeg" alt="" class="c-categories__img">
-						</div>
-					</a>
+					{% endfor %}
 				</div>
 			</div>
 
